Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-Sep-20 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ eeschema
  * beautify, add debug Show() functions, changed ReturnFieldName()
    to return "const wxString&" for speed, added GetFieldValue().
  * tracking down questionable behavior (a bug?) in erc regarding pwr_flag, still looking


2007-sept-20 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
    * hotkeys handling finished
+ pcbnew
    * bug fix: a subtle bug in place via : partial drc only was made.


2007-Sep-14 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * controle.cpp, added Function AllAreModulesAndReturnSmallestIfSo() which is
    called from PcbGeneralLocateAndDisplay()
  * onrightclick.cpp changed to calls to BOARD_ITEM::MenuText(), and switched
    to member functions for createPopupMenus() so we can get all the state
    information we need for the proper menus.
  * BOARD_ITEM::MenuText() got new argument BOARD*, and elaboration for 
    TRACKs and VIAs and Pcb Graphics.
  * Fixed a problem in GENERAL_COLLECTOR::Inspect() so it now knows that MODULEs
    have their own visibility controls (same for pads and pcb texts).  This 
    interpretation must always match the drawing code's interpretation.
  * Made TRACK::TRACK( const TRACK& ) protected to enforce use of TRACK::Copy()


2007-Sep-13 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ kicad
  * Inverted the logic associated with filters.  Filters now enable a file
    in the project manager.  The default is to ignore all files.