@@ -4,6 +4,14 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-Sep-22 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++ pcbnew
+    GENERAL_COLLECTOR::Collect() was skipping thru hole pads even though they
+    were visible.
+    Highlight tool now sends message to eeschema when a pad is selected.
+    
+
 2007-Sep-20 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
 + eeschema
